c4prj2_input/grade.txt
Grading at Sat Jun 27 07:27:40 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:23:8: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
  num[j]=str[i];
        ^
input.c:27:21: error: passing argument 1 of ‘atoi’ from incompatible pointer type [-Werror=incompatible-pointer-types]
       size_t n=atoi(num);
                     ^
In file included from input.c:2:0:
/usr/include/stdlib.h:147:12: note: expected ‘const char *’ but argument is of type ‘char **’
 extern int atoi (const char *__nptr)
            ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
